<resources>
    <string name="app_name">Stoper</string>
    <string name="offer_ride">Ponudi voznju</string>
    <string name="find_ride">Pronadji prevoz</string>
    <string name="action_settings">Podesavanja</string>
    <string name="menu_title_offer">Ponudi</string>
    <string name="menu_title_rides">Dodaj vožnju</string>
    <string name="menu_title_search">Pretraži</string>
    <string name="menu_title_profile">Profil</string>
    <string name="menu_title_chat">Poruke</string>
    <string name="menu_logout">Odjavi se</string>
    <string name="start_destination">Polazim iz...</string>
    <string name="end_destination">Idem u...</string>
    <string name="date">Datum</string>
    <string name="departure_after">Polazak posle</string>
    <string name="start_typing">Pocnite da kucate</string>
    <string name="my_location">Moja lokacija</string>
    <string name="number_of_passengers">Broj putnika</string>
    <string name="register">Registruj se</string>
    <string name="login">Prijavi se</string>
    <string name="intro">Deljenje prevoza Vam olaksava putovanje.</string>
    <string name="connect_with_facebook">Povezi se s fejsbukom</string>
    <string name="register_with_mail">Registruj se preko mejla</string>
    <string name="regulations">Registracijom putem e-mail ili Fejsbuk naloga, prihvatate Odredbe i uslove i Politiku
    privatnosti</string>
    <string name="gender">Pol</string>
    <string name="name">Ime</string>
    <string name="lastname">Prezime</string>
    <string name="birth_year">Godina rodjenja</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Lozinka</string>
    <string name="repeat_password">Ponovi lozinku</string>
    <string name="newsletter">Zelim da me obavestavate o novostima, ponudama i poklonima!</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="next">Dalje</string>
    <string name="finish_offer">Zavrsi</string>
    <string name="ride_details">Detalji o voznji</string>
    <string name="price_details">Cena voznje</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="google_maps_key">AIzaSyDT9LFTvIEcj1GhGxjZkp8_CO2gFjkyBPY</string>
    <string name="start_dest">Mesto polaska</string>
    <string name="end_dest">Mesto dolaska</string>
    <string name="app_bar_home">Početna</string>
    <string name="app_bar_offer">Ponuda vožnje</string>
    <string name="app_bar_search">Pretraga vožnje</string>
    <string name="app_bar_demand">Ponuda vožnje</string>
    <string name="app_bar_profile">Profil</string>
    <string name="app_bar_chat">Poruke</string>
    <string name="profile_details_tab">Detalji</string>
    <string name="profile_account_tab">Nalog</string>
    <string name="details_first_title">O Vama</string>
    <string name="link_to_biography_edit_title">Napišite svoju mini biografiju</string>
    <string name="link_to_settings_edit_title">Dodaj moja željena podešavanja</string>
    <string name="details_second_title">Potvrda</string>
    <string name="link_to_add_phone_number_title">Dodaj moj broj telefona</string>
    <string name="details_third_title">Automobil</string>
    <string name="link_to_car_edit_title">Izmeni automobil</string>
    <string name="link_to_show_profil_title">Prikaži moj javni profil</string>
    <string name="account_statistic_data_title">Vaši statistički podaci</string>
    <string name="account_statistic_data_link_title">Date ocene</string>
    <string name="account_recieved_data_link_title">Dobijene ocene</string>
    <string name="account_settings_title">Podešavanja</string>
    <string name="account_settings_link_notifications_title">Obaveštenja</string>
    <string name="account_settings_link_change_password_title">Promena lozinke</string>
    <string name="account_about_us_title">O nama</string>
    <string name="account_about_us_help_title">Pomoć</string>
    <string name="account_about_us_terms_of_service_title">Opšti uslovi korišćenja</string>
    <string name="account_about_us_privacy_title">Pravila privatnosti</string>
    <string name="account_logout_title">ODJAVITE SE</string>
    <string name="show_profile_app_bar_title">Prikaz profila</string>
    <string name="show_profile_subitle_custom_settings">O</string>
    <string name="show_profile_speking_title">Pričljivost</string>
    <string name="show_profile_smoking_title">Pušenje</string>
    <string name="show_profile_pets_title">Kućni ljubimci</string>
    <string name="show_profile_music_title">Muzika</string>
    <string name="show_profile_email_status_not_confirmed">Email adresa nije potvrdjena</string>
    <string name="show_profile_email_status_confirmed">Email adresa je potvrdjena</string>
    <string name="edit_profile_app_bar_title">Uredi profil</string>
    <string name="select_photo_link_title">Odaberite fotografiju za profil</string>
    <string name="o_vama_title">O vama</string>
    <string name="email_title">Email</string>
    <string name="phone_number_title">Broj telefona</string>
    <string name="gender_hint">Pol</string>
    <string name="first_name_hint">Ime</string>
    <string name="last_name_hint">Prezime</string>
    <string name="birth_year_hint">Godina rodjenja</string>
    <string name="biography_hint">Mini biografija</string>
    <string name="email_hint">Email</string>
    <string name="area_call_hint">Pozivni broj</string>
    <string name="phone_number_hint">Broj telefona</string>
    <string name="save_data_for_profil_button_title">SAČUVAJ PODATKE ZA PROFIL</string>
    <string name="save_email_button_title">SAČUVAJ MEJL</string>
    <string name="save_phone_number_button_title">SAČUVAJ TELEFONSKI BROJ</string>
    <string name="user_custom_settings_app_bar_title">Izmeni podešavanja</string>
    <string name="speaking_spinner_title">Pričljivost</string>
    <string name="smoking_spinner_title">Pušenje</string>
    <string name="music_spinner_title">Muzika</string>
    <string name="pets_spinner_title">Ljubimci</string>
    <string name="button_submit_custom_settings">Sačuvaj podešavanja</string>
    <string-array name="speaking_array">
        <item>Ja sam tiha osoba</item>
        <item>Pričam u zavisnosti od raspoloženja</item>
        <item>Volim da pričam</item>
    </string-array>
    <string-array name="smoking_array">
        <item>Bez pušenja u automobilu, molim</item>
        <item>Ne znam</item>
        <item>Pušenje u automobilu mi ne smeta</item>
    </string-array>
    <string-array name="music_array">
        <item>Tišina je zlato</item>
        <item>Ne znam</item>
        <item>Samo nek se vrti</item>
    </string-array>
    <string-array name="pets_array">
        <item>Bez ljubimaca, molim</item>
        <item>Ne znam</item>
        <item>Pet friendly!</item>
    </string-array>
    <string name="phone_number_app_bar_title">Dodajte broj telefona</string>
    <string name="car_first_page_app_bar_title">Informacije o Vašem automobilu</string>
    <string name="car_edit_title">Molimo Vas unesite podatke o Vašem automobilu</string>
    <string name="edit_car_registration_number_country_hint">Država</string>
    <string name="edit_car_registration_number_hint">Broj registarske tablice.</string>
    <string name="edit_car_year_hint">Godina prve registracije</string>
    <string name="edit_car_color_hint">Boja Vašeg automobila</string>
    <string name="edit_car_types_hint">O kakvom automobilu se radi</string>
    <string name="edit_car_brand_name_hint">Marka Vašeg atomobila</string>
    <string name="edit_car_brand_model_hint">Model Vašeg automobila</string>
    <string name="button_registration_number_continue">Sačuvaj podatke</string>
    <string name="statistic_data_app_bar_title">Date ocene</string>
    <string name="recieved_rates_app_bar_title">Dobijene ocene</string>
    <string name="change_password_app_tar_title">Promena lozinke</string>
    <string name="change_password_old_hint">Tekuća lozinka</string>
    <string name="change_password_new_hint">Nova lozinka</string>
    <string name="change_password_new_confirmed_hint">Potvrdite novu lozinku</string>
    <string name="change_password_save_button">Sačuvaj novu lozinku</string>
    <string-array name="gender_array">
        <item>Muški</item>
        <item>Ženski</item>
    </string-array>
    <string-array name="marks_array">
        <item>prva</item>
        <item>druga</item>
        <item>treca</item>
        <item>cetvrta</item>
    </string-array>
    <string-array name="car_types">
        <item>Hečbek</item>
        <item>Limuzina</item>
        <item>Kabriolet</item>
        <item>Karavan</item>
        <item>Terenac</item>
        <item>Kombi</item>
        <item>Mini-kombi</item>
        <item>Veliki kombi</item>
    </string-array>
    <string-array name="colors">
        <item>Crna</item>
        <item>Bela</item>
        <item>Tamnosiva</item>
        <item>Siva</item>
        <item>Bordo</item>
        <item>Crvena</item>
        <item>Tamnoplava</item>
        <item>Plava</item>
        <item>Tamnozelena</item>
        <item>Zelena</item>
        <item>Smedja</item>
        <item>Bež</item>
        <item>Narandžasta</item>
        <item>Žuta</item>
        <item>Ljubičasta</item>
        <item>Roze</item>
    </string-array>
    <string-array name="countries" formatted="false" translatable="false">
        <item>Serbia</item>
        <item>Austria</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Cyprus</item>
        <item>Finland</item>
        <item>France</item>
        <item>Greece</item>
        <item>Italy</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia [FYROM]</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>San Marino</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>
    <string name="user_successfully_added">Uspesno dodat korisnik!</string>
    <string name="user_unable_to_add">Ne moze se dodati korisnik!</string>
    <string name="adding_user_to_db">Dodajem korisnika u bazu.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Molimo sacekajte...</string>
    <string name="type_a_message">Kucajte poruku...</string>
    <string name="note_hint">Dodajte belesku za voznju</string>
    <string name="are_you_sure">Da li ste sigurni?</string>
    <string name="cancel">Otkazi</string>
    <string name="added_mark_to_title">Dato kome</string>
    <string name="recieved_mark_from_title">Ocenu dao</string>
    <string name="ride_details_reserve_ride">Rezervišite</string>
    <string name="ride_details_email_is_confirmed">E-mail adresa je potvrđena</string>
    <string name="ride_details_email_is_not_confirmed">E-mail adresa nije potvrđena</string>
    <string name="ride_details_car_default">Podatak o automobilu nije definisan \nod strane korisnika</string>
    <string name="ride_details_car_color_default">Podatak o boji automobila \nnije definisan od strane korisnika</string>
    <string name="currency">din</string>
</resources>