<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_car"
            android:title="@string/app_bar_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_title_search" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_add_circle"
            android:title="@string/menu_title_rides" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_messages"
            android:title="@string/menu_title_chat" />

    </group>

    <item android:title="@string/menu_title_profile">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle"
                android:title="@string/menu_title_profile" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>


</menu>
