<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ChangePasswordActivity">

    <include layout="@layout/app_bar"/>

    <android.support.design.widget.TextInputLayout
        style="@style/ChangePasswordInputContainer">
        <EditText
            android:id="@+id/change_password_old"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_old_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ChangePasswordInputContainer">
        <EditText
            android:id="@+id/change_password_new"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_new_hint"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/ChangePasswordInputContainer">
        <EditText
            android:id="@+id/change_password_new_confirmed"
            style="@style/ChangePasswordEditText"
            android:hint="@string/change_password_new_confirmed_hint"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/ChangePasswordButton"
        android:text="@string/change_password_save_button"/>
</LinearLayout>