<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/search_layout"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.7"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/start_destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_destination"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/end_destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_destination"
            android:focusable="false"
            />
        <EditText
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:focusable="false"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.7"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/number_of_passengers"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center|left"/>
            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="horizontal"/>
        </LinearLayout>
        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/find_ride" />
    </LinearLayout>

</FrameLayout>