<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stoper.stoper.fragments.MainFragment">
    <LinearLayout
        android:id="@+id/groupNumbers"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.7"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/end_destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_destination"
            />
        <Button
            android:id="@+id/buttonOffer_id"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/offer_ride"/>

        <Button
            android:id="@+id/button_id"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/find_ride"/>
    </LinearLayout>

</FrameLayout>
