<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".activities.EditProfileActivity">

    <include layout="@layout/app_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:src="@drawable/diavolo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/select_photo_link_title"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_vama_title"
        android:paddingTop="30dp"
        android:textColor="@color/black"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender_hint"
        android:textColorLink="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:textColorLink="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:textColorLink="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birth_year_hint"
        android:textColorLink="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="UserName"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>