<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_offer"
    tools:context=".fragments.OfferFragment">


    <LinearLayout
        android:id="@+id/groupNumbers"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.7"
        android:layout_width="200dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/start_destination_offer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_destination" />
        <EditText
            android:id="@+id/end_destination_offer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/end_destination" />

        <Button
            android:id="@+id/button_offer_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
    </LinearLayout>
</FrameLayout>