<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stoper.stoper.fragments.StarterFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:src="@drawable/golf2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/intro"
            android:gravity="center"/>
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login" />
    </LinearLayout>

</FrameLayout>
